# wellwellwell

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  ca_profile.xml  pyproject.toml
.github/workflows/: publish-ghcr.yml
deploy/: docker-compose.example.yml
deploy/systemd/: wellwellwell-api.service  wellwellwell-collect.service  wellwellwell-collect.timer
docs/: camera-to-model.md  ubuntu-setup.md  unraid-docker.md  unraid-ui.md
scripts/: bootstrap-ubuntu.sh  install-systemd.sh  install.sh
unraid/: wellwellwell.xml
wellwellwell/: api.py  capture.py  cli.py  config.py  db.py  detector.py  ratelimit.py  runtime.py  service.py
wellwellwell/static/: app.js  index.html  manifest.json  styles.css
