[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wellwellwell"
version = "0.1.0"
description = "Local-first well water level monitor for UniFi Protect cameras"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1.0",
  "numpy>=2.0,<3.0",
  "opencv-python-headless>=4.10,<5.0",
  "python-dotenv>=1.0,<2.0",
  "uvicorn>=0.34,<1.0",
]

[project.scripts]
wellwellwell = "wellwellwell.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
wellwellwell = ["static/*"]
